<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_infor_personal"
            android:icon="@drawable/menu_infor_personal"
            android:title="@string/menu_infor_personal" />
        <item
            android:id="@+id/nav_course_management_user"
            android:icon="@drawable/menu_infor_course"
            android:title="@string/menu_infor_course" />

        <item
            android:id="@+id/nav_member_management"
            android:icon="@drawable/menu_infor_course"
            android:title="Quản lý thành viên" />

        <item
            android:id="@+id/nav_course_management_admin"
            android:icon="@drawable/menu_course_managent"
            android:title="@string/menu_management_course" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/menu_log_out"
            android:title="@string/menu_log_out" />
    </group>
</menu>