<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.programinglearningapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_infor_personal"
        android:name="com.example.programinglearningapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_infor_personal"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_course_management_user"
        android:name="com.example.programinglearningapp.ui.my_courses.MyCoursesFlagment"
        android:label="@string/menu_infor_course"
        tools:layout="@layout/fragment_course_management" />

<!--    <fragment-->
<!--        android:id="@+id/nav_course_management"-->
<!--        android:name="com.example.programinglearningapp.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_infor_course"-->
<!--        tools:layout="@layout/fragment_course_management" />-->

    <fragment
        android:id="@+id/nav_course_management_admin"
        android:name="com.example.programinglearningapp.ui.courseManagement.CourseManagementFragment"
        android:label="Quản lý khóa học"
        tools:layout="@layout/fragment_course_management" />

    <fragment
        android:id="@+id/nav_member_management"
        android:name="com.example.programinglearningapp.ui.MemberManager.MemberManagementFragment"
        android:label="Quản lý thành viên"
        tools:layout="@layout/activity_member_management" />

<!--    <fragment-->
<!--        android:id="@+id/nav_member_management_edit"-->
<!--        android:name="com.example.programinglearningapp.ui.MemberManager.MemberManagementEdit"-->
<!--        android:label="Sửa thông tin thành viên"-->
<!--        tools:layout="@layout/activity_member_management_edit" />-->

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.example.programinglearningapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_log_out"
        tools:layout="@layout/fragment_slideshow" />
</navigation>